crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__environments__multline_display.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..44
  matrix Gathered - @0..44
    row 0:
      row @17..22
        run "a" @17..18
        run "+" @19..20
        run "b" @21..22
    row 1:
      row @26..29
        run "+" @26..27
        run "c" @28..29
-- problems --
